[workspace]
members = [
    "packages/*", 
    "contracts/gov",
    "contracts/community-fund",
    "contracts/profit-check",
    "contracts/stable-arb-terra",
    "contracts/stable-arb-astro",
    "contracts/stablecoin-vault",
    "contracts/vesting",
    "contracts/tokenomics/airdrop",
    "contracts/tokenomics/lp_emissions_proxy",
    "contracts/tokenomics/lp_emissions",
    "contracts/treasury/treasury",
    "contracts/treasury/dapps/terraswap"
]

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
