[workspace]
members = [
    "packages/*", 
    "contracts/governance",
    "contracts/community-fund",
    "contracts/profit-check",
    "contracts/stable-arb-terra",
    "contracts/stable-arb-astro",
    "contracts/stablecoin-vault",
    "contracts/emissions",
    "contracts/vesting",
    "contracts/tokenomics/airdrop",
    "contracts/tokenomics/lp_emissions_proxy",
    "contracts/tokenomics/lp_emissions",
    "contracts/treasury/treasury",
    "contracts/treasury/dapps/anchor",
    "contracts/treasury/dapps/astroport",
    "contracts/treasury/dapps/terraswap",
    "contracts/treasury/dapps/dapp-template",
    "contracts/treasury/dapps/vault-dapp",
    "contracts/treasury/memory"
]

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
