[workspace]
members = [
    "packages/*", 
    "contracts/governance",
    "contracts/community-fund",
    "contracts/peg-arb",
    "contracts/stablecoin-vault",
    "contracts/emissions",
    "contracts/vesting",
    "contracts/tokenomics/airdrop",
    "contracts/tokenomics/lp_emissions_proxy",
    "contracts/tokenomics/lp_emissions",
    "contracts/treasury/treasury",
    "contracts/treasury/dapps/anchor",
    "contracts/treasury/dapps/astroport",
    "contracts/treasury/dapps/terraswap",
    "contracts/treasury/dapps/dapp-template",
    "contracts/treasury/dapps/vault",
    "contracts/treasury/memory",
    "scripts"
]

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
