[package]
name = "community-fund"
version = "0.0.1"
authors = ["CyberHoward", "Kerber0x", "0xFable"]
edition = "2018"
description = "Burns whale tokens"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "community-fund.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw0 = { version = "0.8" }
cw2 = { version = "0.8" }
cw20 = { version = "0.8" }
terraswap = "2.4.0"
terra-cosmwasm = "2.2.0"
cosmwasm-std = "0.16.7"
cosmwasm-storage = "0.16.7"
cw-controllers = { version = "0.8" }
cw-storage-plus = { version = "0.8" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.21" }
white-whale = { version = "1.0.0", path = "../../packages/white_whale" }


[dev-dependencies]
cosmwasm-schema = "0.16.7"
cw-multi-test = { version = "0.13.2"}
terra-multi-test = {git="https://github.com/astroport-fi/terra-plus", rev="e0dcab33c0a414c6cfb2c24b78ddc606f574325f", package = "terra-multi-test"}
terra-mocks = {git ="https://github.com/terra-money/cosmwasm-contracts.git", rev = "b25f4ac2d7bddaa3a18838cfe51d18e1ae855dcd", package = "terra-mocks"}
cw20-base = { version = "0.8", features = ["library"] }
