[package]
name = "luna-unbond-handler"
version = "0.1.0"
authors = ["Kerber0x <kerber0x@protonmail.com>", "kaimen-sano <kaimen_sano@protonmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw2 = { version = "0.8" }
cw20 = { version = "0.8" }
cosmwasm-std = { version = "0.16.7" }
cosmwasm-storage = { version = "0.16.7" }
cw-storage-plus = { version = "0.9.1" }
cw-controllers = { version = "0.8" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.21" }
semver = "1"
white-whale = { version = "1.0.0", path = "../../packages/white_whale" }
terraswap = "2.4.0"

[dev-dependencies]
cosmwasm-schema = { version = "0.16.7" }
cw-multi-test = { version = "0.8"}
