[package]
name = "luna-unbond-handler"
version = "0.1.0"
authors = ["Kerber0x <kerber0x@protonmail.com>", "kaimen-sano <kaimen_sano@protonmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw2 = { version = "0.8" }
cw20 = { version = "0.8" }
cosmwasm-std = { version = "0.16.7" }
cosmwasm-storage = { version = "0.16.7" }
cw-storage-plus = { version = "0.9.1" }
cw-controllers = { version = "0.8" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.21" }
semver = "1"
white-whale = { version = "1.0.0", path = "../../packages/white_whale" }
terraswap = "2.4.0"

[dev-dependencies]
cosmwasm-schema = { version = "0.16.7" }
luna-vault = { version = "0.1.0", path = "../luna-vault" }
cw20-base = { version = "0.8", features = ["library"] }
memory = { version = "0.1.0", path = "../treasury/memory" }
anchor_basset_hub = {git ="https://github.com/Anchor-Protocol/anchor-bAsset-contracts.git", rev = "486f1cd495325798f884e19880180a62566b5e48", package = "anchor_basset_hub"}
basset = {git ="https://github.com/Anchor-Protocol/anchor-bAsset-contracts.git", rev = "486f1cd495325798f884e19880180a62566b5e48", package = "basset"}
treasury = { version = "0.1.0", path = "../treasury/treasury" }

cw-multi-test = { version = "0.8"}
terra-mocks = {git ="https://github.com/terra-money/cosmwasm-contracts.git", rev = "b25f4ac2d7bddaa3a18838cfe51d18e1ae855dcd", package = "terra-mocks"}
terra-multi-test = {git="https://github.com/astroport-fi/terra-plus", rev="e0dcab33c0a414c6cfb2c24b78ddc606f574325f", package = "terra-multi-test"}

