[package]
name = "mars-fields-liquidation-helper"
version = "1.0.0"
authors = ["_astromartian"]
edition = "2018"
description = "Contract to facilitate MARS Fields (levereged yield farming strats) liquidations via the whitewhale UST arbitrage strategy"


exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
whitewhale-periphery =  { path = "../../packages/whitewhale_periphery" }
cosmwasm-std = { version = "0.16.0", features = ["iterator"] }
cw20 = { version = "0.8" } 
cw20-base = { version = "0.8", features = ["library"] }
cw-storage-plus = "0.8"
cosmwasm-bignumber = "2.2.0"

schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }


[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
cosmwasm-storage = { version = "0.16.0" }
# terra-multi-test = {git = "https://github.com/astroport-fi/terra-plus.git"}