[package]
name = "whitewhale-liquidation-nft"
version = "1.0.0"
authors = ["Ethan Frey, _astromartian"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
whitewhale-liquidation-helpers =  { path = "../../../packages/liquidation_helpers" }
cw0 = { version = "0.9.0" }
cw2 = { version = "0.9.0" }
cw721 = {  version = "0.9.0" }
cw-storage-plus = { version = "0.9.0" }
cosmwasm-std = { version = "0.16.0" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }